<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/popup_window_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_read"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/btn_read"
            android:textColor="@color/popup_text_color"
            android:textSize="20sp" />
        
        
        <Button
            android:id="@+id/btn_collect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/btn_collect"
            android:textColor="@color/popup_text_color"
            android:textSize="20sp" />
        
        
        <Button
            android:id="@+id/btn_copy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/btn_copy"
            android:textColor="@color/popup_text_color"
            android:textSize="20sp" />
        
        
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/btn_delete"
            android:textColor="@color/popup_text_color"
            android:textSize="20sp" />
        
        
        <Button
            android:id="@+id/btn_ercode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/btn_ercode"
            android:textColor="@color/popup_text_color"
            android:textSize="20sp" />
        
        
        <Button
            android:id="@+id/btn_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/btn_info"
            android:textColor="@color/popup_text_color"
            android:textSize="20sp" />

        
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="15dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/popup_text_color"
            android:textSize="20sp"  />
    </LinearLayout>

</RelativeLayout>
