<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg" >
    
    <include
        android:id="@+id/top_layout" 
        layout="@layout/title_layout"/>

    <LinearLayout
        android:layout_marginTop="@dimen/top_bar_size"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
       
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/top_bar_size"
            android:layout_gravity="bottom" >

            <RadioGroup
                android:id="@+id/main_tab"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/top_bar_size"
                android:background="@drawable/main_page_tab_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_button1"
                    style="@style/main_tab_bottom"
                    android:checked="true"
                    android:drawableTop="@drawable/main_collect_btn"
                    android:text="@string/main_collect" >
                    
                </RadioButton>

                <RadioButton
                    android:id="@+id/radio_button2"
                    style="@style/main_tab_bottom"
                    android:checked="false"
                    android:drawableTop="@drawable/main_book_btn"
                    android:text="@string/main_book"
                     />

                <RadioButton
                    android:id="@+id/radio_button3"
                    style="@style/main_tab_bottom"
                    android:checked="false"
                    android:drawableTop="@drawable/main_mp3_btn"
                    android:text="@string/main_mp3" />

                <RadioButton
                    android:id="@+id/radio_button4"
                    style="@style/main_tab_bottom"
                    android:checked="false"
                    android:drawableTop="@drawable/main_download_btn"
                    android:text="@string/main_download" />

                
            </RadioGroup>
           
                
        </RelativeLayout>
    </LinearLayout>

</TabHost>
