<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@drawable/detial_operation_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_about_us"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/about_us"
            android:textColor="@color/detail_popup_text_color"
            android:textSize="@dimen/operation_text_size" />
       <LinearLayout
           android:id="@+id/service_layout"
           android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"> 
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="1px"
             android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/personal_gray"/>
        
        <Button
            android:id="@+id/btn_update_res"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/update_res"
            android:textColor="@color/detail_popup_text_color"
            android:textSize="@dimen/operation_text_size" />
        
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="1px"
             android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/personal_gray"/>
        
        <Button
            android:id="@+id/btn_get_app"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/get_app"
            android:textColor="@color/detail_popup_text_color"
            android:textSize="@dimen/operation_text_size" />
        </LinearLayout>
 <!--        
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
             android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/personal_gray"/>
        
        <Button
            android:id="@+id/btn_seat_set"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/seat_set"
            android:textColor="@color/detail_popup_text_color"
            android:textSize="@dimen/operation_text_size" />
        
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
             android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/personal_gray"/>
        
        <Button
            android:id="@+id/btn_fault_report"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/fault_report"
            android:textColor="@color/detail_popup_text_color"
            android:textSize="@dimen/operation_text_size" />
        
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
             android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/personal_gray"/>
        
        <Button
            android:id="@+id/btn_password_reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:padding="10dp"
            android:background="@color/transparent"
            android:text="@string/password_reset"
            android:textColor="@color/detail_popup_text_color"
            android:textSize="@dimen/operation_text_size" />
        
		 <ImageView 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
             android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/personal_gray"/>
		 
        <Button
            android:id="@+id/btn_recharge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@color/transparent"
            android:text="@string/recharge"
            android:textColor="@color/detail_popup_text_color"
            android:padding="10dp"
            android:textSize="@dimen/operation_text_size"  />
      -->   
    </LinearLayout>

</RelativeLayout>
